Fix: right aligned numbers in masthead search

--- a/app/assets/stylesheets/masthead.css.scss
+++ b/app/assets/stylesheets/masthead.css.scss
@@ -109,3 +109,7 @@
     display: none;
   }
 }
+
+ul.ui-autocomplete li .hits {
+  float: right;
+}
